spacing fixes, and various small updates to the site in general

--- a/site.css
+++ b/site.css
@@ -86,6 +86,24 @@ body {
     border-bottom: 1px dotted #000000;
 }
 
+.task {
+    margin-bottom: 5px;
+    padding: 5px;
+    width: 100%;
+    
+    background-color: #eeeeee;
+}
+
+.title {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 3px;
+}
+
+.description {
+    
+}
+
 #container {
     margin: 0 auto;
     width: 960px;
